# rs_password_manager

./: Cargo.toml  README.md  Settings.toml
.github/: dependabot.yml  release-please.yml
.github/workflows/: audit.yml  ci.yml  release-please.yml  release.yml
rs-password-manager/: Cargo.toml
rs-password-manager-cli/: Cargo.toml
rs-password-manager-cli/src/: main.rs
rs-password-manager/src/: crypto.rs  error.rs  lib.rs  models.rs  storage.rs  validation.rs
src/: lib.rs  main.rs
