[package]
name = "rs-password-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A secure password manager library"

[dependencies]
aes.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
base64.workspace = true
zeroize.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile.workspace = true 